@@ -1,3 +1,7 @@
+29 Oktober 2012: Matthijs
+- Put back occluded data in signed zone files/transfers.
+  Make sure that their RRtypes don't end up in the NSEC(3) chain.
+
 19 Oktober 2012: Matthijs
 - Fix issue where IXFRs are coming too fast and some are lost.
 
